--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 </head>
 
 <body>
-    <header>
-        <img src="./img/bikcraft.svg" alt="Logo">
-        <nav>
-            <ul>
-                <li><a href="#">Bicicletas</a></li>
-                <li><a href="#">Seguros</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="./img/bikcraft.svg" alt="Logo">
+            </a>
+            <nav>
+                <ul class="header-menu">
+                    <li><a href="#">Bicicletas</a></li>
+                    <li><a href="#">Seguros</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
 </body>
