--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="./">
                 <img src="./img/bikcraft.svg" alt="Logo">
             </a>
-            <nav>
-                <ul class="header-menu">
+            <nav class="cor-0">
+                <ul class="header-menu font-1-m">
                     <li><a href="#">Bicicletas</a></li>
                     <li><a href="#">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
@@ -32,8 +32,8 @@
     <main class="introducao-bg">
         <div class="introducao">
             <div class="introducao-conteudo">
-                <h1>Bicicletas feitas sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a class="botao" href="#">escolha a sua</a>
             </div>
             <div class="introducao-imagem">
@@ -41,6 +41,7 @@
             </div>
         </div>
     </main>
+    <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 
 </body>
 
