--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
             <nav class="cor-0">
                 <ul class="header-menu font-1-m">
-                    <li><a href="#">Bicicletas</a></li>
+                    <li><a href="./bicicletas.html">Bicicletas</a></li>
                     <li><a href="#">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
