--- a/termos.html
+++ b/termos.html
@@ -17,14 +17,14 @@
 <body id="termos">
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
+            <a href="./index.html">
                 <img src="./img/bikcraft.svg" alt="Logo">
             </a>
             <nav class="cor-0">
                 <ul class="header-menu font-1-m">
                     <li><a href="./bicicletas.html">Bicicletas</a></li>
-                    <li><a href="#">Seguros</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="./seguros.html">Seguros</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
